# ELZHOST

./: README.md  buildozer.spec  requirements.txt
Cpp/: CMakeLists.txt  system_controller.cpp  voice_processor.cpp
PYTHON/: control.py  main.py  voice.py
json/: license.json  memory.json  settings.json
